# Generated by Django 6.0.8 on 2026-08-16 05:43

import uuid

from django.db import migrations, models


class Migration(migrations.Migration):
    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="CreditAllocation",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4, editable=False, primary_key=True, serialize=False
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("requirement_code", models.CharField(max_length=160)),
                ("allocated_credits", models.PositiveIntegerField(default=0)),
                ("allocation_order", models.PositiveIntegerField(default=0)),
            ],
        ),
        migrations.CreateModel(
            name="DegreeAuditResult",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4, editable=False, primary_key=True, serialize=False
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("status", models.CharField(max_length=32)),
                ("total_approved_credits", models.PositiveIntegerField(default=0)),
                ("total_applied_credits", models.PositiveIntegerField(default=0)),
                ("total_excess_credits", models.PositiveIntegerField(default=0)),
                ("payload", models.JSONField(default=dict)),
                ("unknown_count", models.PositiveIntegerField(default=0)),
            ],
        ),
        migrations.CreateModel(
            name="DegreeAuditRun",
            fields=[
                (
                    "id",
                    models.UUIDField(
                        default=uuid.uuid4, editable=False, primary_key=True, serialize=False
                    ),
                ),
                ("created_at", models.DateTimeField(auto_now_add=True)),
                ("updated_at", models.DateTimeField(auto_now=True)),
                ("history_fingerprint", models.CharField(max_length=128)),
                ("exception_fingerprint", models.CharField(max_length=128)),
                ("engine_version", models.CharField(max_length=80)),
                ("result_hash", models.CharField(max_length=128)),
                ("generated_at", models.DateTimeField()),
                ("input_snapshot", models.JSONField(default=dict)),
            ],
            options={
                "ordering": ["-generated_at"],
            },
        ),
    ]
